--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "dependencies": {
       "bcrypt": "^5.0.1",
       "connect-session-sequelize": "^7.1.4",
-      "dotenv": "^8.6.0",
+      "dotenv": "^16.0.1",
       "express": "^4.18.1",
-      "express-handlebars": "^5.3.5",
+      "express-handlebars": "^6.0.6",
       "express-session": "^1.17.3",
+      "jest": "^28.1.1",
       "mysql2": "^2.3.3",
+      "nodemon": "^2.0.16",
       "sequelize": "^6.21.0"
     },
     "devDependencies": {
